--- a/ejercicios-para-bajar-de-peso.html
+++ b/ejercicios-para-bajar-de-peso.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="index, follow" />
     <meta name="language" content="es-ES" />
 
-    <title>Los mejores ejercicios para bajar de peso en casa : Descúbrelos!</title>
+    <title>Ejercicios para bajar de peso: Descúbre como bajar de peso en casa!</title>
 
     <!-- Google Optimize -->
     <style>.async-hide { opacity: 0 !important} </style>
@@ -46,11 +46,11 @@
     <!-- End Facebook Pixel Code -->
 
     <meta name="verification" content="81bd71e1f26eb0b3898a5e427df1b4df" />
-    <meta name="description" content="Hacer esta rutina con ejercicios para bajar de peso será fácil. Con ictiva solo tendrás que dar al play. ¡Empieza tu sesión de entrenamiento hoy!" />
+    <meta name="description" content="Hacer esta rutina con ejercicios para bajar de peso será fácil. Con las videosesiones de ictiva aprende cómo bajar de peso. ¡Empieza tu sesión de entrenamiento hoy!" />
     <meta name="keywords" content="ejercicios para bajar de peso, como bajar de peso, ejercicios para bajar de peso en casa, ejercicios para bajar de peso rápido, rutina para bajar de peso, rutina de ejercicios para bajar de peso" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Los mejores ejercicios para bajar de peso en casa : Descúbrelos!" />
-    <meta property="og:description" content="Hacer esta rutina con ejercicios para bajar de peso será fácil. Con ictiva solo tendrás que dar al play. ¡Empieza tu sesión de entrenamiento hoy!" />
+    <meta property="og:title" content="Ejercicios para bajar de peso: Descúbre como bajar de peso en casa!" />
+    <meta property="og:description" content="Hacer esta rutina con ejercicios para bajar de peso será fácil. Con las videosesiones de ictiva aprende cómo bajar de peso. ¡Empieza tu sesión de entrenamiento hoy!" />
     <meta property="og:url" content="https://www.ictiva.com/ejercicios-para-bajar-de-peso/" />
     <meta property="og:site_name" content="ictiva, tu gimnasio online" />
     <meta property="og:image" content="https://www.ictiva.com/img/logo_ictiva.svg" />
@@ -297,7 +297,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                 </div>
                 <div class="col-12 btn-scroll pt-2 text-center d-none d-sm-block">
-                    <p class="py-4 btn"><a data-scroll href="#pagetwo" class="text-uppercase text-white text-center m-0 py-4">Descubre la sala<br><i class="fas fa-chevron-down text-white mt-2"></a></i></p>
+                    <p class="py-4 btn"><a data-scroll href="#pagetwo" class="text-uppercase text-white text-center m-0 py-4">Sigue leyendo<br><i class="fas fa-chevron-down text-white mt-2"></a></i></p>
                 </div>
             </div>
         </div>
@@ -431,7 +431,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <iframe frameborder="0" height="360" src="https://player.vimeo.com/video/176716908?color=fcbe17&title=0&byline=0&portrait=0" width="480"></iframe>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
-                    <h2 class="mb-5 pt-2 text-center text-md-left text-primary text-uppercase">La mejor APP con ejercicios para bajar de peso en casa</h2>
+                    <h2 class="mb-5 pt-2 text-center text-md-left text-primary text-uppercase">La mejor APP con ejercicios para <a href="https://play.google.com/store/apps/details?id=ictiva.carbonbyte.com.ictiva&utm_source=home&utm_medium=google-play&utm_campaign=ictiva&utm_content=" target="_blank" class="text-primary">bajar de peso en casa</a></h2>
                     <p class="mb-3 ls text-medium">La <a href="https://itunes.apple.com/us/app/ictiva-tu-gimnasio-online-de-ejercicios-en-casa/id1217405866?mt=8" class="text-primary">APP para hacer ejercicio</a> de ictiva es una des las más completas el mercado, ya que no solamente tendrás acceso a esta rutina, sino que además, solo por descargarte la aplicación, gratuitamente en Apple Store si tienes iOS o en Google Play si tienes Android, tendrás acceso a más de 50 vídeos gratuitos de más de 21 disciplinas para que los pruebes y repitas tantas veces como quieras.</p>
                     <p class="mb-3 ls text-medium">Un vez abonado, podrás ver más de 800 vídeosesiones de las 21 disciplinas que tenemos que ictiva. Podrás llevar tu gimnasio online allí dónde vayas y no saltarte ni una sola sesión de entrenamiento. ¿A qué esperas para descargarla y empezar a hacer los ejercicios para bajar de peso rápido?</p>
                     <p class="mb-3 ls text-medium">Además, es una de las pocas en dar información con respecto a la evolución a tu entrenamiento. Como por ejemplo, te dice cuántos vídeos has visto, qué sesiones has realizado, la evolución de tu IMC, cuánto peso has perdido, cuántas calorías has quemado, entre otros. Que te servirán como guía durante tu entrenamiento para lograr tu objetivo marcado y como motivación extra.</p>
