--- a/salud.html
+++ b/salud.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="index, follow" />
     <meta name="language" content="es-ES" />
 
-    <title>Salud y Bienestar - Yoga, Pilates, Hipopresivos y Ejercicios para la espalda - ictiva.</title>
+    <title>Salud y Bienestar - Pásate a una vida saludable y practica el wellness- ictiva.</title>
 
     <!-- Google Optimize -->
     <style>.async-hide { opacity: 0 !important} </style>
@@ -46,16 +46,16 @@
 <!-- End Facebook Pixel Code -->
 
     <meta name="verification" content="81bd71e1f26eb0b3898a5e427df1b4df" />
-    <meta name="description" content="Ejercicios de abdominales hipopresivos, clases de Yoga y Pilates onliney ejercicios para la espalda para mejorar tu salud y bienestar." />
-    <meta name="keywords" content="hipopresivos, yoga en casa, pilates en casa, danza del vientre, gimnasia hipopresiva, ejercicios para la espalda, yoga online, pilates online, ejercicios hipopresivos" />
+    <meta name="description" content="Clases online y dietas saludables para mejorar tu salud y bienestar. Empieza hoy con el wellness." />
+    <meta name="keywords" content="salud, bienestar, salud y bienestar, wellness, vida saludable, dieta saludable, health, healthy, nutrición saludable, healthy food" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="ictiva, tu gimnasio online" />
-    <meta property="og:description" content="Ejercicios de abdominales hipopresivos, clases de Yoga y Pilates onliney ejercicios para la espalda para mejorar tu salud y bienestar." />
-    <meta property="og:url" content="https://www.ictiva.com/salud" />
+    <meta property="og:title" content="Salud y Bienestar - Pásate a una vida saludable y practica el wellness" />
+    <meta property="og:description" content="Clases online y dietas saludables para mejorar tu salud y bienestar. Empieza hoy con el wellness." />
+    <meta property="og:url" content="https://www.ictiva.com/salud/" />
     <meta property="og:site_name" content="ictiva, tu gimnasio online" />
     <meta property="og:image" content="https://www.ictiva.com/img/logo_ictiva.svg" />
 
-    <link rel=”canonical” href=”https://www.ictiva.com/salud” />
+    <link rel=”canonical” href=”https://www.ictiva.com/salud/” />
 
     <!--Icon, favicon & webapp -->
     <link rel="shortcut icon" href="homes/img/favicon.ico" type="image/vnd.microsoft.icon" />
@@ -94,11 +94,8 @@
         }
     }
     </style>
-
 </head>
-
 <body id="page-top">
-
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html5?id=GTM-PRF3HL"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -165,7 +162,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <p class="text-uppercase text-white h4 font-weight-bold p-3 mt-5 mb-3" style="background-color: rgba(229,117,50,.8);">Especial BlackFriday - 30% Dto - Código: BF30</p>
                 <!-- <p class="text-uppercase text-white h4 pt-3 pb-4 mb-5" style="background-color: rgba(0,0,0,.4);"><strong class="h1 text-primary">30% Dto - Código: <span class="font-weight-bold">VERANO18</span></strong></p> -->
                 <h1 class="display-1 text-white text-uppercase">Salud y Bienestar</h1>
-                <h3 class="py-1 py-sm-3 py-lg-5 lead text-white home-subtitle">#ConquistaTuCuerpo</h3>
+                <h3 class="py-1 py-sm-3 py-lg-5 lead text-white home-subtitle">Pásate a la vida saludable</h3>
 
                 <!-- Button trigger modal -->
                 <button type="button" class="btn btn-cta play-btn-wrap" data-toggle="modal" data-target="#exampleModalLong">
@@ -273,22 +270,37 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
         </div>
     </section>
-
-    <div class="container-fluid py-5 px-sm-5 bg-motisalud">
+    <div id="id-app" class="container-fluid bg-lightgrey2">
+        <div class="row py-5">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading display-4 text-uppercase">DIETAS SALUDABLES</h2>
+                <h4>Cuida tu cuerpo y gana en salud y bienestar</h4>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid py-5 px-sm-5 bg-manzanas">
         <div class="row py-5 align-items-center h-100">
-            <div class="col-12 offset-md-4 col-md-8 text-white text-right px-5">
+            <div class="col-12 offset-md-4 col-md-8 text-right px-5">
               <h3 class="display-3 py-4 text-uppercase">"Mens Sana in Corpore Sano"</h1>
-              <p class="lead py-2 text-bigger">Por que hacer ejercicio cambia tu cuerpo, tu mente y tu actitud</p>
+              <p class="py-2 text-bigger">Apúntate a la tendencia Healthy Food</p>
               <p class="py-5">
                     <a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?home=salud">Inicia tu Entrenamiento</a>
                 </p>
             </div>
         </div>
     </div>
+    <div id="id-app" class="container-fluid bg-lightgrey2">
+        <div class="row py-5">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading display-4 text-uppercase">APLICACIÓN WELLNESS DE ICTIVA</h2>
+                <h4>Entrenamiento y nutrición saludable</h4>
+            </div>
+        </div>
+    </div>
     <div class="container-fluid py-5 px-sm-5 bg-app4">
         <div class="row py-5 align-items-center h-100">
             <div class="col-12 col-md-10 col-lg-9 text-white px-5">
-              <h3 class="display-4 py-4 text-uppercase">Tu rutina de ejercicios donde quieras</h3>
+              <h3 class="display-4 py-4 text-uppercase">Tu rutina saludable donde quieras</h3>
               <p class="lead py-4 text-bigger">La herramienta que te ayudará a cuidarte y lograr tu bienestar.</p>
               <p>Descárgate la aplicación aquí:</p>
               <a href="https://play.google.com/store/apps/details?id=ictiva.carbonbyte.com.ictiva&utm_source=home&utm_medium=google-play&utm_campaign=ictiva&utm_content=" target="_blank"><img src="homes/img/logos-footer/google-play-badge.png" class="img-fluid img-logo" alt="android app" width="194" height="75"></a>
