--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 
     <!--  Cookies Policy -->
-    <link rel="stylesheet" type="text/css" href="/homes/cookieconsent/cookieconsent.min.css" />
-    <script src="/homes/cookieconsent/cookieconsent.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="homes/cookieconsent/cookieconsent.min.css" />
+    <script src="homes/cookieconsent/cookieconsent.min.js"></script>
     <script>
     window.addEventListener("load", function(){
     window.cookieconsent.initialise({
@@ -174,7 +174,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <a class="text-dark btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=gimnasio">TARIFAS</a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=gimnasio">INICIA TU ENTRENAMIENTO</a>
+                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU ENTRENAMIENTO</a>
                     </li>
                     <li class="bg-darkgrey p-0 py-sm-2 p-xl-2">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
@@ -188,64 +188,109 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <header class="bg-gym d-flex align-items-center section-header-video">
         <div class="row align-items-center h-100 m-0 w-100 bg-video">
             <div class="col text-center no-padding promo">
-                <p class="text-uppercase text-white h4 font-weight-bold p-3 mb-4 mt-2" style="background-color: rgba(229,117,50,.8);">Especial BlackFriday - 30% dto - Código: BF30</p>
+                <!-- <p class="text-uppercase text-white h4 font-weight-bold p-3 mb-4 mt-2" style="background-color: rgba(229,117,50,.8);">Especial BlackFriday - 30% dto - Código: BF30</p> -->
                 <!--<p class="text-uppercase text-white h4 pt-3 pb-4 mb-5" style="background-color: rgba(0,0,0,.4);"><strong class="h1 text-primary">30% Dto en todas las tarifas - Código: <span class="font-weight-bold">BF30</span></strong></p>-->
                 <h1 class="display-1 text-white text-uppercase text-shadow pt-5">Gimnasio Online</h1>
                 <!--<p class="py-1 py-sm-3 py-lg-4 text-white" style="font-size: 2rem;">25 disciplinas diferentes. Descúbrelas!</p>-->
                 <h2 class="py-1 py-sm-3 py-lg-3 text-primary font-weight-bold">¡Más de 1.000 videosesiones de ejercicios en casa!</h2>
                 <div class="hidden-xs-down">
-                    <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?home=gimnasio">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
                 <div class="navbar navbar-dark hidden-sm-up" data-toggle="sticky-onscroll">
                   <div class="container no-padding">
                     <div class="navbar-header">
-                      <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?home=gimnasio">INICIA TU ENTRENAMIENTO</a></p>
+                      <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU ENTRENAMIENTO</a></p>
                     </div>
                   </div>
                 </div>
             </div>
         </div>
         <video autoplay loop muted class="w-100 hidden-lg-down">
-            <source src="/homes/video/fondo_video_ictiva_1080.webm" type="video/webm">
-            <source src="/homes/video/fondo_video_ictiva_1080.mp4" type="video/mp4">
+            <source src="homes/video/fondo_video_ictiva_1080.webm" type="video/webm">
+            <source src="homes/video/fondo_video_ictiva_1080.mp4" type="video/mp4">
             Your browser does not support HTML5 video.
         </video>
     </header>
     
 
-    <section id="id-gym" class="no-padding">
-        <!-- <div class="container-fluid bg-darkgrey">
+    <section class="no-padding" id="top-section">
+        <div class="container-fluid">
+            <div class="row no-padding">
+                <div class="col-md-6 no-padding text-center block">                    
+                    <figure class="cl-box">
+                        <img class="img-fluid" src="homes/img/fotos/perdida-de-peso.jpg" height="auto" width="100%" alt="">                            
+                        <figcaption class="cl-content">
+                            <h2 class="px-1 px-sm-5 mx-0 mx-sm-5 text-white display-4 text-uppercase">Pérdida de peso y mejora del cardio</h2>
+                            <div class="hidden-sm-down">
+                                <p class="lead mt-5 text-bigger"><a href="https://www.ictiva.com/ejercicios-en-casa/videos-aerobic/">Aeróbic</a></p>
+                                <p class="lead text-bigger"><a href="https://www.ictiva.com/ejercicios-en-casa/videos-total-body-conditioning-tbc/">TBC</a></p>
+                                <p class="lead text-bigger"><a href="https://www.ictiva.com/ejercicios-en-casa/videos-steps/">Steps</a></p>
+                                <p class="lead text-bigger"><a href="https://www.ictiva.com/ejercicios-en-casa/combat/">Combat</a></p>
+                                <p class="lead text-bigger"><a href="https://www.ictiva.com/ejercicios-en-casa/videos-boxeo/">Boxeo</a></p>
+                                <p class="py-5">
+                                    <a class="btn btn-cta btn-primary btn-xl" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU ENTRENAMIENTO</a>
+                                </p>
+                            </div>
+                        </figcaption>
+                    </figure>
+                </div>
+                <div class="col-md-6 no-padding text-center block">                    
+                    <figure class="cl-box">
+                        <img class="img-fluid" src="homes/img/fotos/tonificar.jpg" height="auto" width="100%" alt="">                            
+                        <figcaption class="cl-content">
+                            <h2 class="px-1 px-sm-5 mx-0 mx-sm-5 text-white display-4 text-uppercase">Muscular, Tonificar y Definir</h2>
+                            <div class="hidden-sm-down">
+                                <p class="lead mt-5 text-bigger"><a href="https://www.ictiva.com/ejercicios-en-casa/videos-fitness/">Fitness</a></p>
+                                <p class="lead text-bigger"><a href="https://www.ictiva.com/ejercicios-en-casa/cuerpos-perfectos/">Cuerpo Perfecto</a></p>
+                                <p class="lead text-bigger"><a href="https://www.ictiva.com/ejercicios-en-casa/hiit/">Hiit</a></p>
+                                <p class="lead text-bigger"><a href="https://www.ictiva.com/ejercicios-de-crossfit/">CrossFitness</a></p>
+                                <p class="lead text-bigger"><a href="https://www.ictiva.com/ejercicios-en-casa/videos-abdominales/">Abdominales</a></p>
+                                <p class="py-5">
+                                    <a class="btn btn-cta btn-primary btn-xl" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU ENTRENAMIENTO</a>
+                                </p>
+                            </div>
+                        </figcaption>
+                    </figure>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    
+
+    <section class="no-padding">
+        <div class="container-fluid bg-darkgrey">
             <div class="row py-5 text-white">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading display-4">PLANES DE ENTRENAMIENTO</h2>
                     <h4>Aprende a realizar ejercicios en casa correctamente con nuestras rutinas de entrenamiento</h4>
                 </div>
             </div>
-        </div> -->
+        </div>
         <div class="container-fluid">
             <div class="row no-gutter">
-                <div class="col-lg-6 efe-bg py-5 hover-box cl-box">
+                <div class="col-lg-6 rc-bg py-5 hover-box cl-box">
                     <div class="text-center py-5 my-0 my-lg-5 cl-content">
-                        <h3 class="py-5 text-white display-4 text-uppercase text-shadow">Efectivo</h3>
-                        <p class="lead text-white px-5 h5 text-shadow2">800 Videosesiones dirigidas de más de 20 <a href="https://www.ictiva.com/ejercicios-en-casa/" class="text-primary font-weight-bold">disciplinas</a> diferentes. Ejercicios para hacer en casa diseñadospor nuestros Personal Trainers, con el fin de que te pongas en forma rápidamente.</p>
+                        <h3 class="py-5 text-white display-4 text-uppercase">Radical change</h3>
+                        <p class="lead text-bigger text-white px-2 px-md-0">49 días intensos para tener un cambio radical</p>
                     </div>
                 </div>
-                <div class="col-lg-6 ada-bg py-5 hover-box cl-box">
+                <div class="col-lg-6 lw-bg py-5 hover-box cl-box">
                     <div class="text-center py-5 my-0 my-lg-5 cl-content">
-                        <h3 class="py-5 text-white display-4 text-uppercase text-shadow">Adaptado a ti</h3>
-                        <p class="lead text-white px-5 h5 text-shadow2">Sea cual sea tu sexo y condición física tenemos clases dirigidas y <a href="https://www.ictiva.com/planes-de-entrenamiento/" class="text-primary font-weight-bold">planes de entrenamiento</a> online que se adaptan a ti.</p>
+                        <h3 class="py-5 text-white display-4 text-uppercase">Lose Weight</h3>
+                        <p class="lead text-bigger text-white px-2 px-md-0">Rutina para bajar de peso en 8 semanas</p>
                     </div>
                 </div>
-                <div class="col-lg-6 don-bg py-5 hover-box cl-box">
+                <div class="col-lg-6 tu-bg py-5 hover-box cl-box">
                     <div class="text-center py-5 my-0 my-lg-5 cl-content">
-                        <h3 class="py-5 text-white display-4 text-uppercase text-shadow">Donde y cuando quieras</h3>
-                        <p class="lead text-white px-5 h5 text-shadow2">Un gimnasio online para hacer ejercicios en casa, en el hotel, en el gimnasio o al aire libre. Nuestros Personal Trainers te guiarán en sus videosesiones. ¡Los días que quieras, las veces que quieras!</p>
+                        <h3 class="py-5 text-white display-4 text-uppercase">Tone Up</h3>
+                        <p class="lead text-bigger text-white px-2 px-md-0">Rutina para tonificar tu cuerpo en 8 semanas</p>
                     </div>
                 </div>
-                <div class="col-lg-6 mot-bg py-5 hover-box cl-box">
+                <div class="col-lg-6 sp-bg py-5 hover-box cl-box">
                     <div class="text-center py-5 my-0 my-lg-5 cl-content">
-                        <h3 class="py-5 text-white display-4 text-uppercase text-shadow">Motivacional</h3>
-                        <p class="lead text-white px-5 h5 text-shadow2">Nuestra herramienta "Motivator", te animará a seguir te dará puntos por cada videosesión realizada, obtendrás medallas y podrás subir en la clasificación.<br>¡Podrás ganar un viaje a una ciudad europea!</p>
+                        <h3 class="py-5 text-white display-4 text-uppercase">Six Pack</h3>
+                        <p class="lead text-bigger text-white px-2 px-md-0">30 días para definir tu abdomen</p>
                     </div>
                 </div>
             </div>
@@ -257,7 +302,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="row py-5">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading display-4">SERVICIOS GIMNASIO EN CASA</h2>
-                    <h4>Todos los servicios de nuestro gimnasio virtual a un mismo precio. <strong>¡Ponte en forma!</strong></h4>
+                    <h4>Todos los servicios de nuestro gimnasio a un mismo precio. <strong>¡Ponte en forma!</strong></h4>
                 </div>
             </div>
         </div>
@@ -324,7 +369,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container text-center">
             <div class="row py-5">
                 <div class="col-12">
-                    <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?home=gimnasio">ABONARME desde 5,95€/mes</a></p>
+                    <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -386,17 +431,68 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container">
             <div class="row text-center py-5">
                 <div class="col-12">
-                    <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?home=gimnasio">ABONARME desde 5,95€/mes</a></p>
+                    <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
     </section>
 
+    <section id="id-gym" class="no-padding">
+        <!-- <div class="container-fluid bg-darkgrey">
+            <div class="row py-5 text-white">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading display-4">PLANES DE ENTRENAMIENTO</h2>
+                    <h4>Aprende a realizar ejercicios en casa correctamente con nuestras rutinas de entrenamiento</h4>
+                </div>
+            </div>
+        </div> -->
+        <div class="container-fluid">
+            <div class="row no-gutter">
+                <div class="col-lg-6 efe-bg py-5 hover-box cl-box">
+                    <div class="text-center py-5 my-0 my-lg-5 cl-content">
+                        <h3 class="py-5 text-white display-4 text-uppercase text-shadow">Efectivo</h3>
+                        <p class="lead text-white px-5 h5 text-shadow2">1000 Videosesiones dirigidas de más de 20 <a href="https://www.ictiva.com/ejercicios-en-casa/" class="text-primary font-weight-bold">disciplinas</a> diferentes. Ejercicios en casa diseñados por nuestros Personal Trainers, con el fin de que te pongas en forma rápidamente.</p>
+                    </div>
+                </div>
+                <div class="col-lg-6 ada-bg py-5 hover-box cl-box">
+                    <div class="text-center py-5 my-0 my-lg-5 cl-content">
+                        <h3 class="py-5 text-white display-4 text-uppercase text-shadow">Adaptado a ti</h3>
+                        <p class="lead text-white px-5 h5 text-shadow2">Sea cual sea tu sexo y condición física tenemos clases dirigidas y <a href="https://www.ictiva.com/planes-de-entrenamiento/" class="text-primary font-weight-bold">planes de entrenamiento</a> online que se adaptan a ti.</p>
+                    </div>
+                </div>
+                <div class="col-lg-6 don-bg py-5 hover-box cl-box">
+                    <div class="text-center py-5 my-0 my-lg-5 cl-content">
+                        <h3 class="py-5 text-white display-4 text-uppercase text-shadow">Donde y cuando quieras</h3>
+                        <p class="lead text-white px-5 h5 text-shadow2">Un gimnasio online para hacer ejercicios en casa, en el hotel, en el gimnasio o al aire libre. Nuestros Personal Trainers te guiarán en sus videosesiones. ¡Los días que quieras, las veces que quieras!</p>
+                    </div>
+                </div>
+                <div class="col-lg-6 mot-bg py-5 hover-box cl-box">
+                    <div class="text-center py-5 my-0 my-lg-5 cl-content">
+                        <h3 class="py-5 text-white display-4 text-uppercase text-shadow">Motivacional</h3>
+                        <p class="lead text-white px-5 h5 text-shadow2">Nuestra herramienta "Motivator", te animará a seguir te dará puntos por cada videosesión realizada, obtendrás medallas y podrás subir en la clasificación.<br>¡Podrás ganar un viaje a una ciudad europea!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>    
+
+    <div class="container-fluid py-5 px-sm-5 bg-motivator">
+        <div class="row py-5 my-0 my-lg-5 align-items-center h-100">
+            <div class="col-12 offset-md-4 col-md-8 text-white text-right px-5">
+              <h3 class="display-3 py-4 text-uppercase">Motivator System</h1>
+              <p class="lead py-2 text-bigger">La herramienta para hacer ejercicios en casa que te premia por mantenerte siempre activo y motivado en tus entrenamientos!</p>
+              <p class="lead py-4 text-bigger">“Los ganadores se ponen metas, los perdedores excusas”</p>
+              <p class="py-5">
+                    <a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU ENTRENAMIENTO</a>
+                </p>
+            </div>
+        </div>
+    </div>
 
     <div id="id-app" class="container-fluid bg-lightgrey2">
             <div class="row py-5">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading display-4">APP GYM VIRTUAL</h2>
+                    <h2 class="section-heading display-4">APP GYM EN CASA</h2>
                     <h4>Entrenamiento y dietas donde tu quieras</h4>
                 </div>
             </div>
