--- a/ejercicios-aerobic.html
+++ b/ejercicios-aerobic.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="index, follow" />
     <meta name="language" content="es-ES" />
 
-    <title>Ejercicios de aeróbic en casa: Ponte en forma con nuestras sesiones online</title>
+    <title>Ejercicios de aeróbic para practicar en casa cúando y cómo quieras | ictiva</title>
 
     <!-- Google Optimize -->
     <style>.async-hide { opacity: 0 !important} </style>
@@ -49,7 +49,7 @@
     <meta name="description" content="Pierde peso y tonifica tu cuerpo al ritmo de la música, con nuestros ejercicios de aeróbic. PRUEBA GRATIS nuestras videosesiones online." />
     <meta name="keywords" content="aerobic, aerobic en casa, aerobic online, ejercicios de aerobic, ejercicios aerobicos, aerobic para principiantes" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Ejercicios de aeróbic en casa: Ponte en forma con nuestras sesiones online" />
+    <meta property="og:title" content="Ejercicios de aeróbic para practicar en casa cúando y cómo quieras" />
     <meta property="og:description" content="Pierde peso y tonifica tu cuerpo al ritmo de la música, con nuestros ejercicios de aeróbic. PRUEBA GRATIS nuestras videosesiones online." />
     <meta property="og:url" content="https://www.ictiva.com/ejercicios-aerobic/" />
     <meta property="og:site_name" content="ictiva, tu gimnasio online" />
