--- a/ejercicios-yoga.html
+++ b/ejercicios-yoga.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="index, follow" />
     <meta name="language" content="es-ES" />
 
-    <title>Ejercicios de Yoga Online para ponerte en forma desde casa</title>
+    <title>Practicar Yoga desde casa con estos ejercicios es muy fácil | ictiva</title>
 
     <!-- Google Optimize -->
     <style>.async-hide { opacity: 0 !important} </style>
@@ -46,11 +46,11 @@
     <!-- End Facebook Pixel Code -->
 
     <meta name="verification" content="81bd71e1f26eb0b3898a5e427df1b4df" />
-    <meta name="description" content="Cuida tu cuerpo y mente con ictiva y sus ejercicios de yoga online. Sesiones virtuales a través de videos. PRUEBA GRATIS AHORA y dale un cambio a tu vida." />
+    <meta name="description" content="El Yoga es una tendencia actual por todos los beneficios que aporta a quienes lo practican. Puedes hacer los ejercicios en casa con esta guía completa de asanas básicas." />
     <meta name="keywords" content="Ejercicios de yoga, Yoga ejercicios, Hacer yoga en casa, Yoga en casa, Yoga online, Ejercicios de yoga para principiantes, Cómo hacer yoga en casa, Ejercicios de yoga en casa, Ejercicios de yoga online" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Yoga Online:Ejercicios de Yoga para ponerte en forma desde casa" />
-    <meta property="og:description" content="Cuida tu cuerpo y mente con ictiva y sus ejercicios de yoga online. Sesiones virtuales a través de videos. PRUEBA GRATIS AHORA y dale un cambio a tu vida." />
+    <meta property="og:title" content="Practicar Yoga desde casa con estos ejercicios es muy fácil" />
+    <meta property="og:description" content="El Yoga es una tendencia actual por todos los beneficios que aporta a quienes lo practican. Puedes hacer los ejercicios en casa con esta guía completa de asanas básicas." />
     <meta property="og:url" content="https://www.ictiva.com/ejercicios-yoga" />
     <meta property="og:site_name" content="ictiva, tu gimnasio online" />
     <meta property="og:image" content="https://www.ictiva.com/img/logo_ictiva.svg" />
