--- a/gimnasio-virtual.html
+++ b/gimnasio-virtual.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="index, follow" />
     <meta name="language" content="es-ES" />
 
-    <title>Gym virtual: Entrena donde y cuando quieras con nuestro Gimnasio Virtual - ictiva</title>
+    <title>Ponte en forma dónde y cúando quieras con nuestro gimnasio virtual  | ictiva</title>
 
     <!-- Google Optimize -->
     <style>.async-hide { opacity: 0 !important} </style>
@@ -46,11 +46,11 @@
     <!-- End Facebook Pixel Code -->
 
     <meta name="verification" content="81bd71e1f26eb0b3898a5e427df1b4df" />
-    <meta name="description" content="En nuestro Gym virtual encontrarás más de 800 rutinas de ejercicios difernetes así como muchos más servicios. Descubre ahora nuestro gimnasio virtual!"/>
+    <meta name="description" content="El gimnasio virtual de ictiva te permite practicar deporte en cualquier lugar cómo y cúando quieras y sin necesidad de grandes aparatos. ¡Es hora de entrenar!"/>
     <meta name="keywords" content="gym virtual, gimnasio virtual, virtual gym, virtuagym, ejercicios gym virtual, videos gym virtual, gymvirtual cardio, gymvirtual gluteos, gymvirtual principiantes, gymvirtual brazos" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Gym virtual: Entrena donde y cuando quieras con nuestro Gimnasio Virtual" />
-    <meta property="og:description" content="En nuestro Gym virtual encontrarás más de 800 rutinas de ejercicios difernetes así como muchos más servicios. Descubre ahora nuestro gimnasio virtual!" />
+    <meta property="og:title" content="Ponte en forma dónde y cúando quieras con nuestro gimnasio virtual" />
+    <meta property="og:description" content="El gimnasio virtual de ictiva te permite practicar deporte en cualquier lugar cómo y cúando quieras y sin necesidad de grandes aparatos. ¡Es hora de entrenar!" />
     <meta property="og:url" content="https://www.ictiva.com/gimnasio-virtual/" />
     <meta property="og:site_name" content="ictiva, tu gimnasio online" />
     <meta property="og:image" content="https://www.ictiva.com/img/logo_ictiva.svg" />
