--- a/rutina-de-abdominales.html
+++ b/rutina-de-abdominales.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="index, follow" />
     <meta name="language" content="es-ES" />
 
-    <title>Rutina de abdominales para lucir un abdomen perfecto!</title>
+    <title>Rutina completa de ejercicios para abdominales que puedes hacer en casa | ictiva</title>
 
     <!-- Google Optimize -->
     <style>.async-hide { opacity: 0 !important} </style>
@@ -46,11 +46,11 @@
     <!-- End Facebook Pixel Code -->
 
     <meta name="verification" content="81bd71e1f26eb0b3898a5e427df1b4df" />
-    <meta name="description" content="Realiza nuestras videosesiones de rutina de abdominales para mujeres y hombres y conseguirás un abdomen diez. Inicia tu entrenamiento hoy mismo!" />
+    <meta name="description" content="Los ejercicios de abdominales son muy sencillos de realizar en casa. En estas rutinas demostramos diferentes tipos de ejercicios para ejercitar esta zona de cuerpo." />
     <meta name="keywords" content="rutina abdominales, rutina de abdominales, rutina abdomen, rutina de ejercicios abdominales, rutinas para el abdomen" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Rutina de abdominales para lucir un abdomen perfecto!" />
-    <meta property="og:description" content="Realiza nuestras videosesiones de rutina de abdominales para mujeres y hombres y conseguirás un abdomen diez. Inicia tu entrenamiento hoy mismo!" />
+    <meta property="og:title" content="Rutina completa de ejercicios para abdominales que puedes hacer en casa" />
+    <meta property="og:description" content="Los ejercicios de abdominales son muy sencillos de realizar en casa. En estas rutinas demostramos diferentes tipos de ejercicios para ejercitar esta zona de cuerpo." />
     <meta property="og:url" content="https://www.ictiva.com/rutina-de-abdominales/" />
     <meta property="og:site_name" content="ictiva, tu gimnasio online" />
     <meta property="og:image" content="https://www.ictiva.com/img/logo_ictiva.svg" />
