--- a/abdominales-en-casa.html
+++ b/abdominales-en-casa.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="index, follow" />
     <meta name="language" content="es-ES" />
 
-    <title>Abdominales en casa: Pon tu abdomen a prueba!</title>
+    <title>Logra unos abdominales de infarto con estos ejercicios en casa</title>
 
     <!-- Google Optimize -->
     <style>.async-hide { opacity: 0 !important} </style>
@@ -46,11 +46,11 @@
     <!-- End Facebook Pixel Code -->
 
     <meta name="verification" content="81bd71e1f26eb0b3898a5e427df1b4df" />
-    <meta name="description" content="Realiza abdominales en casa y consigue el abdomen que siempre deseaste. Inicia tu entrenamiento ahora mismo y saca las abdominales que llevas dentro!" />
+    <meta name="description" content="Aprende a tonificar y ejercitar tus abdominales gracias a esta rutina de ejercicios en casa. Notarás los beneficios de este entrenamiento antes de lo que esperas." />
     <meta name="keywords" content="abdominales, abdominales en casa, abdomen, como sacar abdominales en casa, como hacer abdominales en casa, videos de abdominales" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Abdominales en casa: Pon tu abdomen a prueba!" />
-    <meta property="og:description" content="Realiza abdominales en casa y consigue el abdomen que siempre deseaste. Inicia tu entrenamiento ahora mismo y saca las abdominales que llevas dentro!" />
+    <meta property="og:title" content="Logra unos abdominales de infarto con estos ejercicios en casa" />
+    <meta property="og:description" content="Aprende a tonificar y ejercitar tus abdominales gracias a esta rutina de ejercicios en casa. Notarás los beneficios de este entrenamiento antes de lo que esperas." />
     <meta property="og:url" content="https://www.ictiva.com/abdominales-en-casa/" />
     <meta property="og:site_name" content="ictiva, tu gimnasio online" />
     <meta property="og:image" content="https://www.ictiva.com/img/logo_ictiva.svg" />
