--- a/entrenamiento-aerobico.html
+++ b/entrenamiento-aerobico.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="index, follow" />
     <meta name="language" content="es-ES" />
 
-    <title>Entrenamiento aeróbico para ponerte en forma rápido</title>
+    <title>Rutinas y ejercicios de entrenamiento aeróbico para practicar en casa | ictiva</title>
 
     <!-- Google Optimize -->
     <style>.async-hide { opacity: 0 !important} </style>
@@ -46,11 +46,11 @@
     <!-- End Facebook Pixel Code -->
 
     <meta name="verification" content="81bd71e1f26eb0b3898a5e427df1b4df" />
-    <meta name="description" content="Con las rutinas de  entrenamiento aeróbico de ictiva, perder peso a la vez que tonificas tu cuerpo es posible gracias a nuestras videosesiones online. PRUEBA GRATIS AHORA." />
+    <meta name="description" content="El ejercicio aeróbico es muy beneficioso especialmente para mejorar la resistencia y para empezar a establecer rutinas deportivas en tu día a día." />
     <meta name="keywords" content="entrenamiento aerobico, entreno aerobico, entrenamiento aerobico para quemar grasa, entrenamiento aerobico en casa, entrenos aerobicos, entrenamiento aerobico intenso, rutina de entrenamiento aerobico" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Entrenamiento aeróbico para ponerte en forma rápido" />
-    <meta property="og:description" content="Con las rutinas de  entrenamiento aeróbico de ictiva, perder peso a la vez que tonificas tu cuerpo es posible gracias a nuestras videosesiones online. PRUEBA GRATIS AHORA." />
+    <meta property="og:title" content="Rutinas y ejercicios de entrenamiento aeróbico para practicar en casa" />
+    <meta property="og:description" content="El ejercicio aeróbico es muy beneficioso especialmente para mejorar la resistencia y para empezar a establecer rutinas deportivas en tu día a día." />
     <meta property="og:url" content="https://www.ictiva.com/entrenamiento-aerobico/" />
     <meta property="og:site_name" content="ictiva, tu gimnasio online" />
     <meta property="og:image" content="https://www.ictiva.com/img/logo_ictiva.svg" />
