--- a/tabata.html
+++ b/tabata.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="index, follow" />
     <meta name="language" content="es-ES" />
 
-    <title>Descubre qué es el Tabata y empieza a practicarlo en casa desde hoy | ictiva</title>
+    <title>¿Qué es Tabata? Descúbrelo y empieza a practicarlo en tu casa | ictiva</title>
 
     <!-- Google Optimize -->
     <style>.async-hide { opacity: 0 !important} </style>
@@ -46,11 +46,11 @@
     <!-- End Facebook Pixel Code -->
 
     <meta name="verification" content="81bd71e1f26eb0b3898a5e427df1b4df" />
-    <meta name="description" content="Empieza tu nuevo reto de entrenamiento Tabata de alta intensidad. Entrena donde y cuando quieras con nuestras sesiones online." />
+    <meta name="description" content="Tabata es una rutina de ejercicios de alta intensidad para deportistas con experiencia y buena forma. Te damos las mejores ideas de ejercicios para realizarlos en casa." />
     <meta name="keywords" content="tabata, metodo tabata, ejercicios tabata, entrenamiento tabata, tabata en casa, tabata online, tabata abdominales, tabata timer online, rutina tabata, tabata app, entrenamiento tabata en casa, tabata cardio, tabata principiantes" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Descubre qué es el Tabata y empieza a practicarlo en casa desde hoy" />
-    <meta property="og:description" content="Empieza tu nuevo reto de entrenamiento Tabata de alta intensidad. Entrena donde y cuando quieras con nuestras sesiones online." />
+    <meta property="og:title" content="¿Qué es Tabata? Descúbrelo y empieza a practicarlo en tu casa." />
+    <meta property="og:description" content="Tabata es una rutina de ejercicios de alta intensidad para deportistas con experiencia y buena forma. Te damos las mejores ideas de ejercicios para realizarlos en casa." />
     <meta property="og:url" content="https://www.ictiva.com/tabata/" />
     <meta property="og:site_name" content="ictiva, tu gimnasio online" />
     <meta property="og:image" content="https://www.ictiva.com/img/logo_ictiva.svg" />
