--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="row align-items-center h-100 m-0 w-100 bg-video">
             <div class="col text-center no-padding promo">
                 <!-- <p class="text-uppercase text-white h4 font-weight-bold p-3 mb-4 mt-2" style="background-color: rgba(229,117,50,.8);">Especial BlackFriday - 30% dto - Código: BF30</p> -->
-                <p class="text-uppercase text-white h4 pt-3 pb-4 mb-4" style="background-color: rgba(0,0,0,.4);"><strong class="h4 text-primary">Logra tus Nuevos Propósitos - Código 30% dto: <span class="font-weight-bold">NA19</span></strong></p>
+                <p class="text-uppercase text-primary h4 pt-3 pb-4 mb-4" style="background-color: rgba(0,0,0,.4);"><strong>Últimos días</strong> - Código 30% dto: <strong>NA19</strong></p>
                 <h1 class="display-1 text-white text-uppercase text-shadow pt-5">Gimnasio Online</h1>
                 <!--<p class="py-1 py-sm-3 py-lg-4 text-white" style="font-size: 2rem;">25 disciplinas diferentes. Descúbrelas!</p>-->
                 <h2 class="py-1 py-sm-3 py-lg-3 text-primary font-weight-bold">¡Más de 1.000 videosesiones de ejercicios en casa!</h2>
