--- a/salud.html
+++ b/salud.html
@@ -159,8 +159,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <header class="bg-wellness d-flex align-items-center">
         <div class="row align-items-center h-100 m-0 w-100">
             <div class="col text-center no-padding promo">
-                <!-- <p class="text-uppercase text-white h4 font-weight-bold p-3 mt-5 mb-3" style="background-color: rgba(229,117,50,.8);">Especial BlackFriday - 30% Dto - Código: BF30</p> -->
-                <p class="text-uppercase text-primary h4 pt-3 pb-4 mb-4" style="background-color: rgba(0,0,0,.4);"><strong>Últimos días</strong> - Código 30% dto: <strong>NA19</strong></p>
+                <!-- <p class="text-uppercase text-white h4 font-weight-bold p-3 mt-5 mb-3" style="background-color: rgba(229,117,50,.8);">Especial BlackFriday - 30% Dto - Código: BF30</p>
+                <p class="text-uppercase text-primary h4 pt-3 pb-4 mb-4" style="background-color: rgba(0,0,0,.4);"><strong>Últimos días</strong> - Código 30% dto: <strong>NA19</strong></p> -->
                 <h1 class="display-1 text-white text-uppercase">Salud y Bienestar</h1>
                 <h3 class="py-1 py-sm-3 py-lg-5 lead text-white home-subtitle">Pásate a la vida saludable</h3>
 
