--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     })(window,document,'script','dataLayer','GTM-PRF3HL');</script>
     <!-- End Google Tag Manager -->
 
+    <!-- Admitad Tag -->
+    <script src="https://www.artfut.com/static/tagtag.min.js?campaign_code=7129a02e64" async onerror='var self = this;window.ADMITAD=window.ADMITAD||{},ADMITAD.Helpers=ADMITAD.Helpers||{},ADMITAD.Helpers.generateDomains=function(){for(var e=new Date,n=Math.floor(new Date(2020,e.getMonth(),e.getDate()).setUTCHours(0,0,0,0)/1e3),t=parseInt(1e12*(Math.sin(n)+1)).toString(30),i=["de"],o=[],a=0;a<i.length;++a)o.push({domain:t+"."+i[a],name:t});return o},ADMITAD.Helpers.findTodaysDomain=function(e){function n(){var o=new XMLHttpRequest,a=i[t].domain,D="https://"+a+"/";o.open("HEAD",D,!0),o.onload=function(){setTimeout(e,0,i[t])},o.onerror=function(){++t<i.length?setTimeout(n,0):setTimeout(e,0,void 0)},o.send()}var t=0,i=ADMITAD.Helpers.generateDomains();n()},window.ADMITAD=window.ADMITAD||{},ADMITAD.Helpers.findTodaysDomain(function(e){if(window.ADMITAD.dynamic=e,window.ADMITAD.dynamic){var n=function(){return function(){return self.src?self:""}}(),t=n(),i=(/campaign_code=([^&]+)/.exec(t.src)||[])[1]||"";t.parentNode.removeChild(t);var o=document.getElementsByTagName("head")[0],a=document.createElement("script");a.src="https://www."+window.ADMITAD.dynamic.domain+"/static/"+window.ADMITAD.dynamic.name.slice(1)+window.ADMITAD.dynamic.name.slice(0,1)+".min.js?campaign_code="+i,o.appendChild(a)}});'></script>
+    <!-- End Admitad Tag -->
+
     <!-- Facebook Pixel Code -->
     <script>
       !function(f,b,e,v,n,t,s)
@@ -138,28 +142,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <span class="navbar-bg-icon"></span>
                 </button>
                 <div class="container pl-lg-0">
-                    <a class="navbar-brand ml-5 ml-lg-0" href="/">
+                    <a class="navbar-brand mx-5 ml-lg-0" href="/">
                         <img src="https://www.ictiva.com/img/logo_ictiva.svg" width="auto" height="auto" alt="ictiva-logo" class="img-fluid">
                     </a>
                     <div class="collapse navbar-collapse" id="navbarExample">
-                        <ul class="navbar-nav m-auto">
+                        <ul class="navbar-nav ml-5">
                             <li class="nav-item active">
                                 <a class="nav-link px-2 text-uppercase mt-3 mt-sm-0" href="#id-gym">Gimnasio <span class="sr-only"></span></a>
                             </li>
                             <li class="nav-item px-2 text-uppercase">
-                                <a class="nav-link" href="#id-servicios">Servicios</a>
-                            </li>
-                            <li class="nav-item px-2 text-uppercase">
-                                <a class="nav-link" href="#id-dietas">Dietas</a>
-                            </li>
-                            <li class="nav-item px-2 text-uppercase">
-                                <a class="nav-link" href="#id-app">App</a>
-                            </li>
-                            <li class="nav-item px-2 text-uppercase">
                                 <a class="nav-link" href="/salud/">Salud</a>
-                            </li>
-                            <li class="nav-item px-2 text-uppercase">
-                                <a class="nav-link text-blue" href="http://www.ictivashop.com/">Shop</a>
                             </li>
                             <li class="nav-item px-2 text-uppercase hidden-lg-up">
                                 <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/?utm_source=ictiva&utm_medium=btn&utm_campaign=menu-btn">Tarifas</a>
@@ -489,15 +481,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
     </div>
 
-    <div id="id-app" class="container-fluid bg-lightgrey2">
-            <div class="row py-5">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading display-4">APP GYM EN CASA</h2>
-                    <h4>Entrenamiento y dietas donde tu quieras</h4>
-                </div>
+    <div id="id-app" class="container-fluid bg-lightgrey2 d-block d-lg-none">
+        <div class="row py-5">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading display-4">APP GYM EN CASA</h2>
+                <h4>Entrenamiento y dietas donde tu quieras</h4>
             </div>
         </div>
-    <div class="container-fluid py-5 px-sm-5 bg-appnew">
+    </div>
+    <div class="container-fluid py-5 px-sm-5 bg-appnew d-block d-lg-none">
         <div class="row py-0 py-lg-4 my-0 align-items-center h-100">
             <div class="col-12 col-md-6 col-lg-6 text-white px-3">
               <h3 class="display-4 py-4 text-uppercase">APP DE ICTIVA TU GIMNASIO ONLINE</h3>
